CORE-4620: MMenu color and spacing fixes as suggested by Designer.

--- a/docroot/themes/custom/transac/alshaya_victoria_secret/sass/components/header/_header-three-level.scss
+++ b/docroot/themes/custom/transac/alshaya_victoria_secret/sass/components/header/_header-three-level.scss
@@ -21,6 +21,10 @@
 
 .menu--two__list {
   .menu--two__list-item {
+    @include breakpoint($desktop) {
+      margin-bottom: 0.3125rem;
+    }
+
     .menu-two__link {
       @include breakpoint($desktop) {
         font-size: 0.75rem;
